Visual decision tree

--- a/recommend.ipynb
+++ b/recommend.ipynb
@@ -210,30 +210,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/loophole/anaconda3/envs/musicRecommendationSystem/lib/python3.10/site-packages/sklearn/base.py:409: UserWarning: X does not have valid feature names, but DecisionTreeClassifier was fitted with feature names\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "array(['HipHop'], dtype=object)"
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 10,
+   "outputs": [],
    "source": [
+    "from sklearn import tree\n",
+    "import joblib\n",
+    "import pandas as pd\n",
+    "\n",
+    "music_data = pd.read_csv('music.csv')\n",
+    "y = music_data['genre']\n",
+    "\n",
     "#The saved trained model can be loaded anytime and used\n",
     "model_loaded = joblib.load('music-recom.joblib')\n",
-    "predictions = model.predict([[21, 1]])\n",
-    "predictions"
+    "\n",
+    "#The visualization of the working of the model can be made in the form of a decision tree visual\n",
+    "tree.export_graphviz(\n",
+    "    model_loaded,\n",
+    "    out_file='music-recom-viz.dot',\n",
+    "    feature_names=['age', 'gender'],\n",
+    "    class_names=sorted(y.unique()),\n",
+    "    label='all',\n",
+    "    rounded=True,\n",
+    "    filled=True\n",
+    ")"
    ],
    "metadata": {
     "collapsed": false,
